added more info detail

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <button class="closebtn" onclick="closeNav()">×</a>
                     <button type="button" class="home" onclick="home.scrollIntoView()">Home</button>
                     <button type="button" class="about" onclick="about.scrollIntoView()">About Me</button>
-                <button type="button" class="facts" onclick="facts.scrollIntoView()">Interesting Facts</button>
+                <button type="button" class="facts" onclick="facts.scrollIntoView()">(Not so) Fun Facts</button>
                 <button type="button" class="projects" onclick="projects.scrollIntoView()">Personal Projects</button>
                 <button type="button" class="socials" onclick="socials.scrollIntoView()">Socials</button>
             </div>
@@ -53,10 +53,10 @@
                     (Not so) Fun Facts
                 </div>
                 <br>
-                <p>hate veggies</p> <br>
-                <p>played 1200 hours of league during final year of hs. could've read 200 books</p><br>
+                <p>I hate veggies, besides broccoli</p> <br>
+                <p>Played 1200 hours of league during final year of high school. That's the amount of time it takes to read approx. 200 books</p><br>
                 <p>Spent around 50k on music lessons</p><br>
-                <p>my pop was shot at while swimming across a border so the "i'm sick" card never worked on my parents</p>
+                <p>My pop was shot at while swimming across a border so the "i'm sick" card never worked on my parents</p>
             </div>
             <div class="section" id="projects">
                 <div class="title">
