--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                     (Not so) Fun Facts
                 </div>
                 <br>
-                <p>I hate veggies, besides broccoli</p> <br>
-                <p>Played 1200 hours of league during final year of high school. That's the amount of time it takes to read approx. 200 books</p><br>
-                <p>Spent around 50k on music lessons</p><br>
-                <p>My pop was shot at while swimming across a border so the "i'm sick" card never worked on my parents</p>
+                <p>I hate veggies, besides broccoli.</p>
+                <p>Played 1200 hours of league during final year of high school. That's the amount of time it takes to read approx. 200 books...</p>
+                <p>Spent around 50k on music lessons.</p>
+                <p>My pop was shot at while swimming across a border so the "i'm sick" card never worked on my parents.</p>
             </div>
             <div class="section" id="projects">
                 <div class="title">
