--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <br>
                 <p>degree: computer science</p>
                 <br>
-                <p>age: 20</p>
+                <p>age: 19</p>
                 <br>
                 <p>hobbies n interests: </p>
                 <br>
@@ -73,11 +73,10 @@
                 <br>
                 <div class="thanks">Thanks for visiting my profile! <br><br> Check out my socials here. </div>
                 <br>
-                <a href="" class="socials">insta</a>
-                <a href="" class="socials">linkedin</a>
-                <br>
-                <a href="" class="socials">github</a>
-                <a href="" class="socials">facebook</a>
+                <a href="https://www.instagram.com/_steveyeung/" class="socials"><img src="insta.png" alt="insta"></a>
+                <a href="http://www.linkedin.com/in/steve-yeung-47897321b" class="socials"><img src="linkedin.png" alt="linkedin"></a>
+                <a href="https://github.com/Zyphias" class="socials"><img src="github.png" alt="github"></a>
+                <a href="https://www.facebook.com/steve.yeung.92798/" class="socials"><img src="facebook.png" alt="facebook"></a>
             </div>
         </div>
     </div>
