added profile pic, a little formatting

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <button class="openbtn" onclick="openNav()">☰</button> 
     <div class="welcome" id="welcome">
         <div class="main_title">
-            Hi, I'm Steve. <br> Welcome to my profile.
+            <div class="titlei">Hi, I'm Steve.</div>
+            <img class="me" src="final.jpeg" alt="me">
+            <div class="titlei">Welcome to my profile. </div> 
         </div>
     </div>
     <div class="all">
@@ -31,32 +33,31 @@
                     About Me
                 </div>
                 <br>
-                <p>name: steve yeung</p>
-                <br>
-                <p>degree: computer science</p>
-                <br>
-                <p>age: 19</p>
-                <br>
-                <p>hobbies n interests: </p>
-                <br>
-                <p>• piano</p>
-                <br>
-                <p>• gym</p>
-                <br>
-                <p>• games</p>
-                <br>
-                <p>favourite food: ramen</p>
-
+                <div class="info">
+                    <p>name: steve yeung</p>
+                    <br>
+                    <p>degree: computer science</p>
+                    <br>
+                    <p>age: 19</p>
+                    <br>
+                    <p>hobbies n interests: </p>
+                    <br>
+                    <p>• music</p>
+                    <br>
+                    <p>• gym</p>
+                    <br>
+                    <p>favourite food: ramen</p>
+                </div>
             </div>
             <div class="section" id="facts">
                 <div class="title">
                     (Not so) Fun Facts
                 </div>
                 <br>
-                <p>I hate veggies, besides broccoli.</p>
+                <p>I hate all veggies, besides broccoli.</p>
                 <p>Played 1200 hours of league during final year of high school. That's the amount of time it takes to read approx. 200 books...</p>
                 <p>Spent around 50k on music lessons.</p>
-                <p>My pop was shot at while swimming across a border so the "i'm sick" card never worked on my parents.</p>
+                <p>My posp was shot at while swimming across a border so the "i'm sick" card never worked on my parents.</p>
             </div>
             <div class="section" id="projects">
                 <div class="title">
