--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <div class="welcome" id="welcome">
         <div class="main_title">
             <div class="titlei">Hi, I'm Steve.</div>
-            <img class="me" src="final.jpeg" alt="me">
+            <img class="profile" src="final.jpeg" alt="me">
             <div class="titlei">Welcome to my profile. </div> 
         </div>
     </div>
     <div class="all">
         <div class="sidebar" id="mySidebar">
-            <div class="h-left">
+            <div class="buttons">
                 <button class="closebtn" onclick="closeNav()">×</a>
-                    <button type="button" class="home" onclick="home.scrollIntoView()">Home</button>
-                    <button type="button" class="about" onclick="about.scrollIntoView()">About Me</button>
-                <button type="button" class="facts" onclick="facts.scrollIntoView()">(Not so) Fun Facts</button>
-                <button type="button" class="projects" onclick="projects.scrollIntoView()">Personal Projects</button>
-                <button type="button" class="socials" onclick="socials.scrollIntoView()">Socials</button>
+                <button type="button" id="buttons" class="home" onclick="home.scrollIntoView()">Home</button>
+                <button type="button" id="buttons"class="about" onclick="about.scrollIntoView()">About Me</button>
+                <button type="button" id="buttons" class="facts" onclick="facts.scrollIntoView()">(Not so) Fun Facts</button>
+                <button type="button" id="buttons" class="projects" onclick="projects.scrollIntoView()">Personal Projects</button>
+                <button type="button" id="buttons" class="socials" onclick="socials.scrollIntoView()">Socials</button>
             </div>
         </div>
         <div class="content" id="content">
