--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="theme-light">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,6 +15,13 @@
             <img class="profile" src="final.jpeg" alt="me">
             <div class="titlei">Welcome to my profile. </div> 
         </div>
+    </div>
+    <div class="container">
+        <h1>Theme Switcher poo</h1>
+        <button id="switch" onclick="toggleSummer()">summer</button>
+        <button id="switch" onclick="toggleWinter()">winter</button>
+        <button id="switch" onclick="toggleAutumn()">autumn</button>
+        <button id="switch" onclick="toggleSpring()">spring</button>
     </div>
     <div class="all">
         <div class="sidebar" id="mySidebar">
@@ -99,6 +106,36 @@
             document.getElementById("mySidebar").style.width = "0";
             // document.getElementById("content").style.margin= "0";
         }
+
+        // function to set a given theme/color-scheme
+        function setTheme(themeName) {
+            localStorage.setItem('theme', themeName);
+            document.documentElement.className = themeName;
+        }
+        // function to toggle between light and dark theme
+        function toggleSummer() {
+            setTheme('summer');
+        }
+        function toggleWinter() {
+            setTheme('winter');
+        }
+        function toggleAutumn() {
+            setTheme('autumn');
+        }
+        function toggleSpring() {
+            setTheme('spring');
+        }
+
+
+
+        // Immediately invoked function to set the theme on initial load
+        (function () {
+        if (localStorage.getItem('theme') === 'theme-dark') {
+            setTheme('theme-dark');
+        } else {
+            setTheme('theme-light');
+        }
+        })();
     </script>
 </body>
 </html>
