changed seasons selection animation in popup

--- a/index.html
+++ b/index.html
@@ -23,15 +23,32 @@
         // prefade action
         document.body.classList.add('fade');
     </script>
+    
     <div class="popup" style="display: flex;">
         <div class="space"></div>
         <div class="pop-info">
             <h1>Theme Selection</h1>
             <div class="selections">
-                <button id="switch" onclick="toggleSummer()" class="close-popup select-summer">Summer</button>
-                <button id="switch" onclick="toggleWinter()" class="close-popup select-winter">Winter</button>
-                <button id="switch" onclick="toggleAutumn()" class="close-popup select-autumn">Autumn</button>
-                <button id="switch" onclick="toggleSpring()" class="close-popup select-spring">Spring</button>
+                <div class="summerselection">
+                    <div class="seasonbutton">
+                        <button id="switch" onclick="toggleSummer()" class="close-popup select-summer">Summer</button>
+                    </div>
+                </div>
+                <div class="winterselection">
+                    <div class="seasonbutton">
+                        <button id="switch" onclick="toggleWinter()" class="close-popup select-winter">Winter</button>
+                    </div>
+                </div>
+                <div class="springselection">
+                    <div class="seasonbutton">
+                        <button id="switch" onclick="toggleSpring()" class="close-popup select-spring">Spring</button>
+                    </div>
+                </div>
+                <div class="autumnselection">
+                    <div class="seasonbutton">
+                        <button id="switch" onclick="toggleAutumn()" class="close-popup select-autumn">Autumn</button>
+                    </div>
+                </div>
             </div>
             
         </div>
@@ -85,7 +102,7 @@
                 <p>I hate all veggies, besides broccoli.</p>
                 <p>Played 1200 hours of league during final year of high school. That's the amount of time it takes to read approx. 200 books...</p>
                 <p>Spent around 50k on music lessons.</p>
-                <p>My posp was shot at while swimming across a border so the "i'm sick" card never worked on my parents.</p>
+                <p>My pop was shot at while swimming across a border so the "i'm sick" card never worked on my parents.</p>
             </div>
             <div class="section" id="projects">
                 <div class="title">
