ensured links opened in new tabs

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                     <button id="switch" onclick="toggleAutumn()" class="close-popup select-autumn">Autumn</button>
                 </div>
             </div>
-            
         </div>
     </div>
     <button class="openbtn" onclick="openNav()">☰</button> 
@@ -106,10 +105,10 @@
                 <br>
                 <div class="thanks">Thanks for visiting my profile! <br><br> Check out my socials here. </div>
                 <br>
-                <a href="https://www.instagram.com/_steveyeung/" class="socials"><img src="/media/icons/insta.png" alt="insta"></a>
-                <a href="http://www.linkedin.com/in/steve-yeung-47897321b" class="socials"><img src="/media/icons/linkedin.png" alt="linkedin"></a>
-                <a href="https://github.com/Zyphias" class="socials"><img src="/media/icons/github.png" alt="github"></a>
-                <a href="https://www.facebook.com/steve.yeung.92798/" class="socials"><img src="/media/icons/facebook.png" alt="facebook"></a>
+                <a href="https://www.instagram.com/_steveyeung/" class="socials" target="_blank"><img src="/media/icons/insta.png" alt="insta"></a>
+                <a href="http://www.linkedin.com/in/steve-yeung-47897321b" class="socials" target="_blank"><img src="/media/icons/linkedin.png" alt="linkedin"></a>
+                <a href="https://github.com/Zyphias" class="socials" target="_blank"><img src="/media/icons/github.png" alt="github"></a>
+                <a href="https://www.facebook.com/steve.yeung.92798/" class="socials" target="_blank"><img src="/media/icons/facebook.png" alt="facebook"></a>
             </div>
         </div>
     </div>
