added preliminary falling leaves

--- a/index.html
+++ b/index.html
@@ -19,6 +19,46 @@
 <body>
     <script src="snow.js"></script>
     <script src="general.js"></script>
+    <div class="leaves">
+        <div class="leaf1">🍁</div>
+        <div class="leaf2">🍁</div>
+        <div class="leaf3">🍁</div>
+        <div class="leaf4">🍁</div>
+        <div class="leaf6">🍁</div>
+        <div class="leaf7">🍁</div>
+        <div class="leaf8">🍁</div>
+        <div class="leaf9">🍁</div>
+        <div class="leaf10">🍁</div>
+        <div class="leaf11">🍁</div>
+        <div class="leaf12">🍁</div>
+        <div class="leaf13">🍁</div>
+        <div class="leaf14">🍁</div>
+        <div class="leaf15">🍁</div>
+        <div class="leaf16">🍁</div>
+        <div class="leaf17">🍁</div>
+        <div class="leaf18">🍁</div>
+        <div class="leaf19">🍁</div>
+        <div class="leaf20">🍁</div>
+        <div class="leaf21">🍁</div>
+        <div class="leaf22">🍁</div>
+        <div class="leaf23">🍁</div>
+        <div class="leaf24">🍁</div>
+        <div class="leaf26">🍁</div>
+        <div class="leaf27">🍁</div>
+        <div class="leaf28">🍁</div>
+        <div class="leaf29">🍁</div>
+        <div class="leaf30">🍁</div>
+        <div class="leaf31">🍁</div>
+        <div class="leaf32">🍁</div>
+        <div class="leaf33">🍁</div>
+        <div class="leaf34">🍁</div>
+        <div class="leaf35">🍁</div>
+        <div class="leaf36">🍁</div>
+        <div class="leaf37">🍁</div>
+        <div class="leaf38">🍁</div>
+        <div class="leaf39">🍁</div>
+        <div class="leaf40">🍁</div>
+    </div>
     <div class="popup" style="display: flex;">
         <div class="space"></div>
         <div class="pop-info">
