--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         $(document).ready(function(){
             $(".close-popup").click(function(){
                 $(".popup").fadeOut(800);
-                $("body").css("overflow", "visible");
+                $("body").css("overflow-y", "visible");
+                $("body").css("overflow-x", "hidden");
+
             });
         });
     </script>
