moved section variables back to index file so scroll would be enabled

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="winterselection seasonselection">
                     <button id="switch" onclick="toggleWinter()" class="close-popup select-winter">Winter</button>
                 </div>
-                <div class="springselection seasonselection">
+                <div class="springselection seasonselection"> 
                     <button id="switch" onclick="toggleSpring()" class="close-popup select-spring">Spring</button>
                 </div>
                 <div class="autumnselection seasonselection">
@@ -163,5 +163,14 @@
             </div>
         </div>
     </div>
+    <script>
+        // setting variables for scroll
+        var home = document.getElementById("welcome");
+        var about = document.getElementById("about");
+        var facts = document.getElementById("facts");
+        var projects = document.getElementById("projects");
+        var socials = document.getElementById("socials");
+
+    </script>
 </body>
 </html>
